--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 zeit.locales CHANGES
 ====================
 
+0.4 (2009-06-09)
+++++++++++++++++
+
+- Übersetzungen aktualisiert.
+
 0.3 (2009-06-08)
 ++++++++++++++++
 
