--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: zeit.cms\n"
 "POT-Creation-Date: Mon Aug 17 08:25:43 2009\n"
-"PO-Revision-Date: 2009-08-17 08:34+0100\n"
-"Last-Translator: Christian Zagrodnick <cz@gocept.com>\n"
+"PO-Revision-Date: 2009-08-18 14:51+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -314,7 +314,7 @@ msgstr "folder specific actions"
 #: zeit/cms/application.zcml:44
 #: zeit/content/article/browser/configure.zcml:142
 msgid "Add"
-msgstr "Hinzufügen …"
+msgstr "Inhalte hinzufügen..."
 
 #: zeit/cms/browser/form.py:144
 #: zeit/content/quiz/browser/answer.py:57
@@ -1330,11 +1330,11 @@ msgstr "Inhalt"
 
 #: zeit/cms/workingcopy/browser/sidebar.pt:13
 msgid "Edited documents"
-msgstr "Bearbeitete Dokumente"
+msgstr "Dokumente in Bearbeitung"
 
 #: zeit/cms/workingcopy/browser/sidebar.pt:24
 msgid "No edited documents."
-msgstr "Keine bearbeiteten Dokumente."
+msgstr "Keine Dokumente in Bearbeitung"
 
 #: zeit/cms/workingcopy/browser/workingcopy.py:105
 msgid "Show original"
