--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.9 (unreleased)
+++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.8 (2009-08-21)
 ++++++++++++++++
 
