--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.10 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.9 (2009-08-27)
 ++++++++++++++++
 
