--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,17 +1,10 @@
 zeit.locales CHANGES
 ====================
 
-0.10 (unreleased)
-+++++++++++++++++
-
-- Nothing changed yet.
-
-
 0.9 (2009-08-27)
 ++++++++++++++++
 
-- Nothing changed yet.
-
+- Übersetzungen aktualisiert
 
 0.8 (2009-08-21)
 ++++++++++++++++
