--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.11 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.10 (2009-09-21)
 +++++++++++++++++
 
