--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.12 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.11 (2009-09-28)
 +++++++++++++++++
 
