--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.14 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.13 (2009-10-19)
 +++++++++++++++++
 
