--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 0.14 (unreleased)
 +++++++++++++++++
 
-- Nothing changed yet.
+- Übersetzungen aktualisiert
 
 
 0.13 (2009-10-19)
