Back to development: 0.15

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.15 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.14 (2009-11-02)
 +++++++++++++++++
 
