--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.16 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.15 (2009-11-04)
 +++++++++++++++++
 
