--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.17 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.16 (2010-02-08)
 +++++++++++++++++
 
