Back to development: 0.18

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.18 (unreleased)
++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.17 (2010-03-10)
 +++++++++++++++++
 
