--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 0.18 (unreleased)
 +++++++++++++++++
 
-- Nothing changed yet.
+- Using versions from the ZTK.
 
 
 0.17 (2010-03-10)
