Back to development: 0.18.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.18.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.18.0 (2010-06-03)
 +++++++++++++++++
 
