--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.19.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.19.0 (2010-06-10)
 +++++++++++++++++++
 
