--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.23.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.23.0 (2011-11-14)
 +++++++++++++++++++
 
