--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.24.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.24.0 (2012-03-13)
 +++++++++++++++++++
 
