--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+0.25.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.25.0 (2012-07-02)
 +++++++++++++++++++
 
