--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Thu Jul  4 13:32:00 2013\n"
-"PO-Revision-Date: 2013-07-04 13:34+0100\n"
+"PO-Revision-Date: 2013-08-05 11:49+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: zeit/addcentral/sidebar.py:28 zeit/addcentral/sidebar.pt:12
 #: zeit/cms/browser/form.py:215 zeit/cms/application.zcml:44
@@ -1476,8 +1476,8 @@ msgstr "Schlagworte manuell auswählen"
 #: zeit/cms/tagging/browser/widget.pt:33
 msgid "Only the first ${keywords_shown} keywords are shown with the article."
 msgstr ""
-"Nur die ersten ${keywords_shown} Schlagwörter werden auf zeit.de beim "
-"Artikel angezeigt."
+"Nur die ersten ${keywords_shown} Schlagwörter (innerhalb schwarzer "
+"Markierung) werden auf zeit.de am Artikel angezeigt."
 
 #: zeit/cms/tagging/interfaces.py:100
 msgid "Too few keywords given."
