Back to development: 2.0.4

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.4 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.3 (2013-08-05)
 ++++++++++++++++++
 
