--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.6 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.5 (2013-09-24)
 ++++++++++++++++++
 
