--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.locales CHANGES
 2.0.6 (unreleased)
 ++++++++++++++++++
 
-- Nothing changed yet.
+- Fix topic link lable translations to an english default (instead of a single
+  space character) VIV-153
 
 
 2.0.5 (2013-09-24)
