--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,15 +15,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Tue Sep 17 13:31:00 2013\n"
-"PO-Revision-Date: 2013-09-17 13:31+0100\n"
-"Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
+"PO-Revision-Date: 2013-10-11 15:11+0100\n"
+"Last-Translator: Christian Zagrodnick <cz@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: zeit/addcentral/sidebar.py:28 zeit/addcentral/sidebar.pt:12
 #: zeit/cms/browser/form.py:215 zeit/cms/application.zcml:44
@@ -2563,31 +2563,31 @@ msgstr "Verlinkt nach"
 
 #: zeit/content/cp/interfaces.py:54
 msgid "Name for topiclinks"
-msgstr " "
+msgstr "Name for topiclinks"
 
 #: zeit/content/cp/interfaces.py:58
 msgid "Label for topiclink #1"
-msgstr " "
+msgstr "Label for topiclink #1"
 
 #: zeit/content/cp/interfaces.py:62
 msgid "Label for topiclink #2"
-msgstr " "
+msgstr "Label for topiclink #2"
 
 #: zeit/content/cp/interfaces.py:66
 msgid "Label for topiclink #3"
-msgstr " "
+msgstr "Label for topiclink #3"
 
 #: zeit/content/cp/interfaces.py:70
 msgid "URL for topiclink #1"
-msgstr " "
+msgstr "URL for topiclink #1"
 
 #: zeit/content/cp/interfaces.py:74
 msgid "URL for topiclink #2"
-msgstr " "
+msgstr "URL for topiclink #2"
 
 #: zeit/content/cp/interfaces.py:78
 msgid "URL for topiclink #3"
-msgstr " "
+msgstr "URL for topiclink #3"
 
 #: zeit/content/cp/interfaces.py:82
 msgid "Titel"
