--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ zeit.locales CHANGES
 2.0.6 (unreleased)
 ++++++++++++++++++
 
-- Fix topic link lable translations to an english default (instead of a single
-  space character) VIV-153
+- Fix topic link lable translations (instead of a single space character)
+  VIV-153
 
 
 2.0.5 (2013-09-24)
