--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Tue Sep 17 13:31:00 2013\n"
-"PO-Revision-Date: 2013-10-11 15:11+0100\n"
+"PO-Revision-Date: 2013-10-11 18:12+0100\n"
 "Last-Translator: Christian Zagrodnick <cz@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2563,31 +2563,31 @@ msgstr "Verlinkt nach"
 
 #: zeit/content/cp/interfaces.py:54
 msgid "Name for topiclinks"
-msgstr "Name for topiclinks"
+msgstr "Navi-Teaser"
 
 #: zeit/content/cp/interfaces.py:58
 msgid "Label for topiclink #1"
-msgstr "Label for topiclink #1"
+msgstr "Schlagwort für Navi-Teaser 1"
 
 #: zeit/content/cp/interfaces.py:62
 msgid "Label for topiclink #2"
-msgstr "Label for topiclink #2"
+msgstr "Schlagwort für Navi-Teaser 2"
 
 #: zeit/content/cp/interfaces.py:66
 msgid "Label for topiclink #3"
-msgstr "Label for topiclink #3"
+msgstr "Schlagwort für Navi-Teaser 3"
 
 #: zeit/content/cp/interfaces.py:70
 msgid "URL for topiclink #1"
-msgstr "URL for topiclink #1"
+msgstr "URL für Navi-Teaser 1"
 
 #: zeit/content/cp/interfaces.py:74
 msgid "URL for topiclink #2"
-msgstr "URL for topiclink #2"
+msgstr "URL für Navi-Teaser 2"
 
 #: zeit/content/cp/interfaces.py:78
 msgid "URL for topiclink #3"
-msgstr "URL for topiclink #3"
+msgstr "URL für Navi-Teaser 3"
 
 #: zeit/content/cp/interfaces.py:82
 msgid "Titel"
