--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.7 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.6 (2013-10-11)
 ++++++++++++++++++
 
