--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Wed Oct 30 14:32:41 2013\n"
-"PO-Revision-Date: 2013-11-08 08:10+0100\n"
+"PO-Revision-Date: 2013-11-08 08:11+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2316,7 +2316,7 @@ msgstr "Teaser-Liste bearbeiten"
 
 #: zeit/content/cp/browser/blocks/layout.teaser.edit-positions.pt:1
 msgid "Edit image positions"
-msgstr "Bildpositionen bearbeiten"
+msgstr "Parkett: Bildpositionen"
 
 #: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:14
 msgid "Edit in place"
