--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.9 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.8 (2013-11-25)
 ++++++++++++++++++
 
