--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 2.0.9 (unreleased)
 ++++++++++++++++++
 
-- Nothing changed yet.
+- Übersetzungen für zeit.magazin
 
 
 2.0.8 (2013-11-25)
