--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.10 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.9 (2014-01-07)
 ++++++++++++++++++
 
