Back to development: 2.0.11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.11 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.10 (2014-01-08)
 +++++++++++++++++++
 
