--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.12 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.11 (2014-01-20)
 +++++++++++++++++++
 
