--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.13 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.12 (2014-03-24)
 +++++++++++++++++++
 
