--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.14 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.13 (2014-04-22)
 +++++++++++++++++++
 
