--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Mon May  5 09:31:37 2014\n"
-"PO-Revision-Date: 2014-05-05 09:32+0100\n"
+"PO-Revision-Date: 2014-05-07 11:49+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1762,11 +1762,11 @@ msgstr "Keyword-Vorschläge (Google News)"
 
 #: zeit/content/article/edit/browser/keyword.py:12
 msgid "More suggestions..."
-msgstr "Weitere Vorschläge..."
+msgstr "Weitere Vorschläge"
 
 #: zeit/content/article/edit/browser/keyword.py:14
 msgid "All Google News keywords..."
-msgstr "Alle Google News Keywords..."
+msgstr "Alle Google News Keywords"
 
 #: zeit/content/article/edit/browser/keyword.py:18
 msgid "Show less"
