--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.15 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.14 (2014-05-09)
 +++++++++++++++++++
 
