Back to development: 2.0.16

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.16 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.15 (2014-05-22)
 +++++++++++++++++++
 
