--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Thu Jun 19 12:42:27 2014\n"
-"PO-Revision-Date: 2014-06-19 12:42+0100\n"
+"PO-Revision-Date: 2014-06-24 08:52+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -3553,7 +3553,7 @@ msgstr "Newsletter"
 
 #: zeit/push/banner-retract.pt:12
 msgid "iOS legacy"
-msgstr "iOS-Geräte (alt)"
+msgstr "Steuerdatei"
 
 #: zeit/push/banner-retract.pt:13
 msgid "Done"
