--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Thu Jun 19 12:42:27 2014\n"
-"PO-Revision-Date: 2014-06-24 08:52+0100\n"
+"PO-Revision-Date: 2014-06-24 13:30+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -3577,7 +3577,7 @@ msgstr "Letztes Social Media Posting"
 
 #: zeit/push/interfaces.py:58
 msgid "Long push text"
-msgstr "Status-Update Facebook"
+msgstr "Facebook-Posting"
 
 #: zeit/push/interfaces.py:60
 msgid "Short push text"
