--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.20 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.19 (2014-06-24)
 +++++++++++++++++++
 
