temporarily removed posting of breaking news to Facebook

--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -1601,7 +1601,7 @@ msgstr "Eilmeldungsbanner anzeigen"
 
 #: zeit/content/article/browser/breaking.py:27
 msgid "breaking-news-social"
-msgstr "Auf Facebook und Twitter posten"
+msgstr "Auf Twitter posten"
 
 #: zeit/content/article/browser/breaking.py:66
 msgid "Publish and push"
