--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.21 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.20 (2014-07-02)
 +++++++++++++++++++
 
