Back to development: 2.0.23

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.23 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.22 (2014-07-17)
 +++++++++++++++++++
 
