--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Mon Aug 25 11:49:53 2014\n"
-"PO-Revision-Date: 2014-08-25 11:50+0100\n"
+"PO-Revision-Date: 2014-08-26 08:45+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2536,11 +2536,11 @@ msgstr "Center-Page 2009"
 
 #: zeit/content/cp/interfaces.py:151
 msgid "automatic"
-msgstr "Automatik aktivieren"
+msgstr "automatisch"
 
 #: zeit/content/cp/interfaces.py:152
 msgid "Amount of teasers"
-msgstr "Anzahl Teaser"
+msgstr "Anzahl Teaser:"
 
 #: zeit/content/cp/interfaces.py:153
 msgid "Raw query"
