--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.24 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.23 (2014-08-29)
 +++++++++++++++++++
 
