--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Thu Aug 28 14:35:39 2014\n"
-"PO-Revision-Date: 2014-08-28 14:38+0100\n"
+"PO-Revision-Date: 2014-09-01 07:44+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1945,7 +1945,7 @@ msgstr "zusätzlicher Ressortaccount:"
 
 #: zeit/content/article/edit/browser/social.py:26
 msgid "Enable mobile push"
-msgstr "Pushnachricht mobile Apps"
+msgstr "Pushnachricht über mobile Apps versenden"
 
 #: zeit/content/article/edit/browser/social.py:34
 msgid "edit social media"
