--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Fri Sep 12 10:04:12 2014\n"
-"PO-Revision-Date: 2014-09-12 10:06+0100\n"
+"PO-Revision-Date: 2014-09-12 10:11+0100\n"
 "Last-Translator: Wolfgang Schnerring <ws@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1587,7 +1587,9 @@ msgstr "Bearbeitung abbrechen"
 #. Default: "Do you really want to delete your workingcopy?"
 #: zeit/cms/workingcopy/browser/delete.pt:8
 msgid "delete-from-workingcopy"
-msgstr "Wollen Sie die Bearbeitung wirklich abbrechen?"
+msgstr ""
+"Wollen Sie die Bearbeitung wirklich abbrechen? Ihre Änderungen gehen dabei "
+"verloren."
 
 #: zeit/cms/workingcopy/browser/sidebar.pt:10
 msgid "Edited documents"
