Back to development: 2.0.26

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.26 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.25 (2014-09-18)
 +++++++++++++++++++
 
