--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.27 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.26 (2014-10-21)
 +++++++++++++++++++
 
