--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.29 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.28 (2014-12-17)
 +++++++++++++++++++
 
