--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.30 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.29 (2015-01-14)
 +++++++++++++++++++
 
