Back to development: 2.0.31

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.31 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.30 (2015-03-10)
 +++++++++++++++++++
 
