--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Wed Mar 11 09:35:27 2015\n"
-"PO-Revision-Date: 2015-03-11 09:40+0100\n"
+"PO-Revision-Date: 2015-03-11 11:58+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2569,7 +2569,7 @@ msgstr "Einstellungen"
 
 #: zeit/content/cp/browser/layout.block.edit-overflow.pt:1
 msgid "Edit block overflow"
-msgstr "Artikelflow"
+msgstr "Fläche verknüpfen"
 
 #: zeit/content/cp/browser/layout.block.edit-properties.pt:1
 msgid "Edit block properties"
@@ -2687,11 +2687,11 @@ msgstr "Spitzmarke"
 
 #: zeit/content/cp/interfaces.py:237
 msgid "Maximum block count"
-msgstr "max. Block-Anzahl"
+msgstr "Anzahl Teaser"
 
 #: zeit/content/cp/interfaces.py:241
 msgid "Overflow into"
-msgstr "Weiterfließen nach"
+msgstr "Verknüpfen mit"
 
 #: zeit/content/cp/interfaces.py:263
 msgid "automatic"
