--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.32 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.31 (2015-03-11)
 +++++++++++++++++++
 
